<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.time4j</groupId>
    <artifactId>time4j-parent</artifactId>
    <version>4.3</version>
    <packaging>pom</packaging>
    <name>Time4J</name>
    <description>Advanced Date and Time library for Java</description>
    <url>http://www.time4j.net</url>
    
    <modules>
        <module>core</module>
        <module>i18n</module>
        <module>calendar</module>
        <module>range</module>
        <module>misc</module>
        <module>olson</module>
    </modules>
    
    <licenses>
        <license>
            <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 2.1, February 1999</name>
            <url>http://www.gnu.org/licenses/lgpl-2.1.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    
    <scm>
        <connection>scm:git:https://github.com/MenoData/Time4j.git</connection>
        <developerConnection>scm:git:git@github.com:MenoData/Time4j.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/MenoData/Time4J</url>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/menodata/time4j/issues</url>
    </issueManagement>
    
    <inceptionYear>2014</inceptionYear>
    
    <developers>
        <developer>
            <id>mhochschild</id>
            <name>Meno Hochschild</name>
            <email>mhochschild@gmx.de</email>
            <roles>
                <role>Project Lead</role>
            </roles>
            <timezone>1</timezone>
        </developer>
    </developers>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.11</version>
                <scope>test</scope>
                <optional>true</optional>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <verbose>true</verbose>
                    <fork>true</fork>
                    <!-- see issue #103
                    <executable>${JAVA_HOME}/bin/javac</executable>
                    -->
                    <compilerVersion>${jdk.min.version}</compilerVersion>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <debug>true</debug>
                    <debuglevel>source,lines</debuglevel>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.2</version>
                <configuration>
                    <taglets>
                        <taglet>
                            <tagletClass>de.menodata.taglets.ConcurrencyTaglet</tagletClass>
                        </taglet>
                        <taglet>
                            <tagletClass>de.menodata.taglets.ExperimentalTaglet</tagletClass>
                        </taglet>
                        <taglet>
                            <tagletClass>de.menodata.taglets.SpecificationTaglet</tagletClass>
                        </taglet>
                    </taglets>
                    <tagletArtifact>
                        <groupId>de.menodata</groupId>
                        <artifactId>doctags</artifactId>
                        <version>2.0</version>
                    </tagletArtifact>
                    <show>public</show>
                    <excludePackageNames>net.time4j.tz.spi:net.time4j.scale.spi:net.time4j.i18n:net.time4j.tz.threeten:net.time4j.calendar.spi</excludePackageNames>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>1.3.1</version>
                <executions>
                    <execution>
                        <id>enforce-java-version</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <message>To build this project JDK ${jdk.min.version} (or greater) is required. Please install it.</message>
                                    <version>${jdk.min.version}</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>            
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
            </plugin>
        </plugins>
    </build>
    
    <profiles>
        <profile>
            <id>release-profile</id>
            <build>
                <plugins>
                    <plugin>
                        <inherited>true</inherited>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <inherited>true</inherited>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <inherited>true</inherited>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>gpg2.exe</executable>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <jdk.min.version>1.8</jdk.min.version>
    </properties>

</project>